Fixed UI layout of user profile on small screens

--- a/skins_adm/bootstrap/rsc/css/style.less
+++ b/skins_adm/bootstrap/rsc/css/style.less
@@ -77,7 +77,7 @@ div.status_icon {
 // Action icons
 .action_icon, .widget_actions a, .no_icon {
 	font-weight: bold;
-	margin: 0 2px;
+	margin: 2px;
 }
 // Remove spaces between the spam voting buttons
 .btn-group .action_icon {
@@ -908,6 +908,7 @@ tr#fileuploader_form td {
 }
 
 h2.user_title {
+	margin-top: 0;
 	margin-bottom: 18px;
 }
 
